[package]
name = "qfo"
version = "0.1.0"
authors = ["abyss <derribado@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
directories = "3.0.2"
hidapi = "1.2.6"
log = "0.4.14"
ron = "0.6.4"
serde = "1.0.126"
stderrlog = "0.5.1"
thiserror = "1.0.25"

[target.'cfg(target_family = "unix")'.dependencies]
x11rb = { version = "0.8.1", features = ["xinput"] }
